# nomadicode-auth

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
nomadicode_auth/: __init__.py  adapters.py  admin.py  apps.py  authentication.py  conf.py  defaults.py  permissions.py  signals.py  token_strategy.py  tokens.py  urls.py
nomadicode_auth/migrations/: 0001_initial.py  0002_rename_nomadicode__phone_p_idx_nomadicode__phone_5b6fe6_idx_and_more.py
nomadicode_auth/models/: __init__.py  otp.py  user.py
nomadicode_auth/serializers/: __init__.py  auth.py  social.py  verify.py
nomadicode_auth/services/: __init__.py  auth.py  otp.py  social.py
nomadicode_auth/sms/: __init__.py  base.py  console.py  dummy.py  messagebird.py  twilio.py
nomadicode_auth/templates/account/email/: email_confirmation_message.txt  email_confirmation_subject.txt  password_reset_key_message.txt  password_reset_key_subject.txt
nomadicode_auth/templates/nomadicode_auth/sms/: otp.txt
nomadicode_auth/users/: __init__.py  admin.py  apps.py  models.py
nomadicode_auth/users/migrations/: 0001_initial.py
nomadicode_auth/views/: __init__.py  _common.py  auth.py  password.py  social.py  verify.py
tests/: settings.py  test_config.py  test_email_confirm.py  test_signup_phone.py  urls.py
