[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomadicode-auth"
version = "0.2.0"
description = "Batteries-included Django auth on top of allauth: email/phone signup, JWT, Google/Facebook, pluggable SMS backends."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nomadicode", email = "dev@nomadicode.com" }]
keywords = ["django", "allauth", "auth", "jwt", "otp", "sms", "twilio"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Django>=4.2",
    "djangorestframework>=3.14",
    "django-allauth[socialaccount]>=65.0",
    "PyJWT>=2.8",
    "requests>=2.31",
]

[project.optional-dependencies]
twilio = ["twilio>=8.0"]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "twilio>=8.0",
]

[project.urls]
Homepage = "https://github.com/nomadicode/nomadicode-auth"
Issues = "https://github.com/nomadicode/nomadicode-auth/issues"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["nomadicode_auth*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
nomadicode_auth = [
    "templates/nomadicode_auth/**/*.txt",
    "templates/nomadicode_auth/**/*.html",
]
